메인페이지 html / css 작업중3

--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -2,20 +2,21 @@
 //상단영역
 #header {
     margin: 0 auto; z-index: 99;
-    border-bottom: 1px solid #000;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.4);
     .center {
         margin: 0 auto; display: flex;
         justify-content: space-between;
         align-items: center; width: 57%;
     }
     .h_top {
-        background-color: #dbdbdb;
+        // background-color: #56d5e8;
+        background-color: #00d3ff;
         .sns {
             display: flex;
             li {
                 margin-right: 25px;
                 font-size: 15px;
-                a {color: #313131;}
+                a {color: #fff;}
             }
         }
         .right_box {
@@ -30,13 +31,13 @@
                     position: absolute; top: 16px;
                     width: 2px; height: 12px;
                     margin: 0 9px;
-                    background-color: #686868;           
+                    background-color: #fff;           
                 }
                 &:last-child {
                     &::after {display: none;}
                 }
                 a {
-                    color: #313131; font-size: 13px;
+                    color: #fff; font-size: 13px;
                 }
             }
         }
@@ -59,21 +60,26 @@
                 line-height: 70px; margin-left: 40px;
                 position: relative;
                 > a {
-                    color: #131313; font-size: 18px;
+                    // color: #131313;
+                    // color: #227da1;
+                    color: #006c97;
+                    font-size: 18px;
                 }
                 .sub_menu {
-                    position: absolute; left: 50%; top: 72px;
+                    position: absolute; left: 50%;
+                    top: 71px;
                     transform: translateX(-50%);
                     text-align: center;
-                    background-color: pink;
+                    background-color: rgba(0,0,0,0.3);
                     width: 150px; z-index: 99;
-                    display: none;
+                    border-radius: 0 0 5px 5px;
+                    display: none; overflow: hidden;
                     li {
                         line-height: 55px;
                         a {
                             display: block; transition: all 0.5s;
-                            color: #131313;
-                            &:hover {background-color: red;}
+                            color: #fff;
+                            &:hover {background-color: #00d3ff;}
                         }
                     }
                 }
@@ -100,7 +106,7 @@
         position: relative;
         .view {
             width: 400%;
-            height: 855px;
+            height: 856px;
             display: flex;
             transition: all 0.5s;
             .slide_box {
@@ -190,20 +196,27 @@
                     position: relative;
                     overflow: hidden;
                     border-radius: 10px;
+                    box-shadow: 3px 5px 10px rgba(0,0,0,0.3);
                     &:hover {
                         .hover_box {bottom: 0;}
                     }
-                    &:nth-child(1) {background-image: url(/img/popular.jpg);}
-                    &:nth-child(2) {background-image: url(/img/popular.jpg);}
-                    &:nth-child(3) {background-image: url(/img/popular.jpg);}
+                    &:nth-child(1) {background-image: url(/img/popular01.jpg);}
+                    &:nth-child(2) {background-image: url(/img/popular02.jpg);}
+                    &:nth-child(3) {background-image: url(/img/popular03.jpg);}
                     &:nth-child(4) {
-                        background-image: url(/img/popular.jpg);
+                        background-image: url(/img/popular04.jpg);
                         width: 66%;}
-                    &:nth-child(5) {background-image: url(/img/popular.jpg);}
-                    .text_box {
-                        box-sizing: border-box;
+                    &:nth-child(5) {background-image: url(/img/popular05.jpg);}
+                    .text_box { 
                         color: #fff;
-                        margin: 207px 0 0 10px;
+                        background-color: rgba(0,0,0,0.7);
+                        box-sizing: border-box;
+                        border-radius: 10px;
+                        position: absolute;
+                        left: 10px; bottom: 10px;
+                        padding: 10px;
+                        .text1 {font-size: 18px; margin-bottom: 5px;}
+                        .text2 {font-size: 14px;}
                     }
                     .hover_box {
                         background-color: rgba(0,0,0,0.7);
@@ -211,6 +224,12 @@
                         position: absolute; left: 0; bottom: -100%;
                         transition: all 0.5s; text-align: center;
                         color: #fff;
+                        display: flex; justify-content: center;
+                        align-items: center;
+                        .wrap {
+                            .local {margin-bottom: 15px; font-size: 20px;}
+                            .addr {margin-bottom: 15px;}
+                        }
                     }
                 }
                 .mg {margin-bottom: 2%;}
@@ -271,23 +290,18 @@
             width: 70%;
             .title_box {
                 .title {text-align: center; margin-bottom: 25px; font-size: 30px;}
-                .sub_title {text-align: center; margin-bottom: 80px; font-size: 15px;}
+                .sub_title {text-align: center; margin-bottom: 120px; font-size: 15px;}
             }
             .bus_wrap {
                 display: flex; justify-content: space-between;
                 .bus_box {
                     width: 22%;
-                    background-color: palegreen;
+                    background-color: #eee;
                     border-radius: 10px;
                     overflow: hidden;
                     box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
-                    // animation: jump duration timing-function delay iteration-count;
-                    // @keyframes jump {
-                        
-                    // }
-                    position: relative;
                     transition: all 0.5s;
-                    &:hover {bottom: 20px;}
+                    &:hover {transform: translateY(-50px);}
                     .tour_img {
                         img {width: 100%;}
                     }
@@ -312,7 +326,7 @@
     }
     //메인페이지 local_count 영역
     .local_count {
-        width: 100%; height: 270px;
+        width: 100%; height: 320px;
         display: flex; justify-content: center;
         align-items: center;
         background-image: url(/img/popular.jpg);
@@ -327,11 +341,15 @@
                 .count_box {
                     width: 18%; margin: 0 2%;
                     text-align: center;
-                    background-color: #dbdbdb;
+                    background-color: #fff;
                     border-radius: 10px;
-                    padding: 15px 0;
-                    .icon {font-size: 35px; margin-bottom: 10px;}
-                    .local_name {font-size: 18px; margin-bottom: 5px;}
+                    padding: 20px 5px;
+                    .img {
+                        height: 95px;
+                        margin-bottom: 20px;
+                        img {width: 80%; height: 100%;}
+                    }
+                    .local_name {font-size: 18px; margin-bottom: 12px;}
                     .count_number {font-size: 20px;}
                 }
             }
@@ -356,6 +374,7 @@
                     background-repeat: no-repeat;
                     background-size: cover;
                     padding: 87px 0 0 20px;
+                    border-radius: 10px;
                     .big_text {
                         font-size: 30px; line-height: 35px;
                         margin-bottom: 50px;
@@ -365,7 +384,7 @@
                             width: 53%;
                             background-color: palegreen;
                             border-radius: 10px;
-                            margin-bottom: 10px;
+                            margin-bottom: 18px;
                             line-height: 45px;
                             padding-left: 12px;
                             a {
@@ -377,8 +396,14 @@
                 }
                 .right {
                     width: 100%; position: absolute; left: 343px; top: 25%;
+                    
                     .local {
+                        position: absolute;
+                        left: 0; top: 0;
+                        // display: none;
                         display: flex;
+                        opacity: 0;
+                        transition: all 0.5s;
                         .box {
                             margin-right: 20px;
                             border: 1px solid #000;
@@ -402,6 +427,10 @@
                                 }
                             }
                         }
+                    }
+                    .local.on {
+                        // display: flex;
+                        opacity: 1;
                     }
                 }
             }
@@ -446,9 +475,9 @@
             }
         }
     }
-    .banner.detail {
-        // .center {background-color: palegreen;}
-    }
+    // .banner.detail {
+    //     // .center {background-color: palegreen;}
+    // }
     //목록페이지
     .travel_list {
         display: flex; justify-content: center;
@@ -771,14 +800,23 @@
                     width: 100%;
                     display: flex;
                     background-color: #27aa78;
-                    .slide_box {
-
-                    }
                 }
             }
         }
     }
 }
+//맨 위로 가게해주는 기능
+#go_top {
+    width: 50px; line-height: 50px;
+    border-radius: 50%;
+    background-color: blue;
+    color: #fff;
+    text-align: center;
+    font-size: 23px;
+    position: fixed; right: 20px; bottom: 20px;
+    cursor: pointer;
+}
+
 // 로그인 영역
 #login {
     height: 100vh; display: flex;
