--- a/views/travel_detail.ejs
+++ b/views/travel_detail.ejs
@@ -65,6 +65,8 @@
             </div>
         </div>
     </div>
+    <!-- 맨 위로 가는 기능 -->
+    <%- include("common/go_top.ejs"); %>
     <%- include("common/footer.ejs"); %>
     <script>
         const del_btn = document.querySelector(".del_btn");
