--- a/views/travel_hotel.ejs
+++ b/views/travel_hotel.ejs
@@ -132,6 +132,8 @@
             </div>
         </div>
     </div>
+    <!-- 맨 위로 가는 기능 -->
+    <%- include("common/go_top.ejs"); %>
     <%- include("common/footer.ejs"); %>
 </body>
 </html>
