--- a/html/css/style.css
+++ b/html/css/style.css
@@ -36,7 +36,7 @@ body {
 #header {
   margin: 0 auto;
   z-index: 99;
-  border-bottom: 1px solid #000;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
 #header .center {
   margin: 0 auto;
@@ -46,7 +46,7 @@ body {
   width: 57%;
 }
 #header .h_top {
-  background-color: #dbdbdb;
+  background-color: #00d3ff;
 }
 #header .h_top .sns {
   display: flex;
@@ -56,7 +56,7 @@ body {
   font-size: 15px;
 }
 #header .h_top .sns li a {
-  color: #313131;
+  color: #fff;
 }
 #header .h_top .right_box {
   display: flex;
@@ -77,13 +77,13 @@ body {
   width: 2px;
   height: 12px;
   margin: 0 9px;
-  background-color: #686868;
+  background-color: #fff;
 }
 #header .h_top .right_box li:last-child::after {
   display: none;
 }
 #header .h_top .right_box li a {
-  color: #313131;
+  color: #fff;
   font-size: 13px;
 }
 #header .h_bot .logo {
@@ -110,19 +110,21 @@ body {
   position: relative;
 }
 #header .h_bot .gnb > li > a {
-  color: #131313;
+  color: #006c97;
   font-size: 18px;
 }
 #header .h_bot .gnb > li .sub_menu {
   position: absolute;
   left: 50%;
-  top: 72px;
+  top: 71px;
   transform: translateX(-50%);
   text-align: center;
-  background-color: pink;
+  background-color: rgba(0, 0, 0, 0.3);
   width: 150px;
   z-index: 99;
+  border-radius: 0 0 5px 5px;
   display: none;
+  overflow: hidden;
 }
 #header .h_bot .gnb > li .sub_menu li {
   line-height: 55px;
@@ -130,10 +132,10 @@ body {
 #header .h_bot .gnb > li .sub_menu li a {
   display: block;
   transition: all 0.5s;
-  color: #131313;
+  color: #fff;
 }
 #header .h_bot .gnb > li .sub_menu li a:hover {
-  background-color: red;
+  background-color: #00d3ff;
 }
 #header .h_bot .mobile_menu {
   display: none;
@@ -153,7 +155,7 @@ body {
 }
 #container .slide .view {
   width: 400%;
-  height: 855px;
+  height: 856px;
   display: flex;
   transition: all 0.5s;
 }
@@ -275,30 +277,43 @@ body {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
+  box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.3);
 }
 #container .popular_local .center .local_wrap .local_box:hover .hover_box {
   bottom: 0;
 }
 #container .popular_local .center .local_wrap .local_box:nth-child(1) {
-  background-image: url(/img/popular.jpg);
+  background-image: url(/img/popular01.jpg);
 }
 #container .popular_local .center .local_wrap .local_box:nth-child(2) {
-  background-image: url(/img/popular.jpg);
+  background-image: url(/img/popular02.jpg);
 }
 #container .popular_local .center .local_wrap .local_box:nth-child(3) {
-  background-image: url(/img/popular.jpg);
+  background-image: url(/img/popular03.jpg);
 }
 #container .popular_local .center .local_wrap .local_box:nth-child(4) {
-  background-image: url(/img/popular.jpg);
+  background-image: url(/img/popular04.jpg);
   width: 66%;
 }
 #container .popular_local .center .local_wrap .local_box:nth-child(5) {
-  background-image: url(/img/popular.jpg);
+  background-image: url(/img/popular05.jpg);
 }
 #container .popular_local .center .local_wrap .local_box .text_box {
-  box-sizing: border-box;
   color: #fff;
-  margin: 207px 0 0 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-sizing: border-box;
+  border-radius: 10px;
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  padding: 10px;
+}
+#container .popular_local .center .local_wrap .local_box .text_box .text1 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+#container .popular_local .center .local_wrap .local_box .text_box .text2 {
+  font-size: 14px;
 }
 #container .popular_local .center .local_wrap .local_box .hover_box {
   background-color: rgba(0, 0, 0, 0.7);
@@ -310,6 +325,16 @@ body {
   transition: all 0.5s;
   text-align: center;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#container .popular_local .center .local_wrap .local_box .hover_box .wrap .local {
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+#container .popular_local .center .local_wrap .local_box .hover_box .wrap .addr {
+  margin-bottom: 15px;
 }
 #container .popular_local .center .local_wrap .mg {
   margin-bottom: 2%;
@@ -394,7 +419,7 @@ body {
 }
 #container .tour_bus .center .title_box .sub_title {
   text-align: center;
-  margin-bottom: 80px;
+  margin-bottom: 120px;
   font-size: 15px;
 }
 #container .tour_bus .center .bus_wrap {
@@ -403,15 +428,14 @@ body {
 }
 #container .tour_bus .center .bus_wrap .bus_box {
   width: 22%;
-  background-color: palegreen;
+  background-color: #eee;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  position: relative;
   transition: all 0.5s;
 }
 #container .tour_bus .center .bus_wrap .bus_box:hover {
-  bottom: 20px;
+  transform: translateY(-50px);
 }
 #container .tour_bus .center .bus_wrap .bus_box .tour_img img {
   width: 100%;
@@ -440,7 +464,7 @@ body {
 }
 #container .local_count {
   width: 100%;
-  height: 270px;
+  height: 320px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -461,17 +485,21 @@ body {
   width: 18%;
   margin: 0 2%;
   text-align: center;
-  background-color: #dbdbdb;
+  background-color: #fff;
   border-radius: 10px;
-  padding: 15px 0;
+  padding: 20px 5px;
 }
-#container .local_count .center .count_wrap .count_box .icon {
-  font-size: 35px;
-  margin-bottom: 10px;
+#container .local_count .center .count_wrap .count_box .img {
+  height: 95px;
+  margin-bottom: 20px;
+}
+#container .local_count .center .count_wrap .count_box .img img {
+  width: 80%;
+  height: 100%;
 }
 #container .local_count .center .count_wrap .count_box .local_name {
   font-size: 18px;
-  margin-bottom: 5px;
+  margin-bottom: 12px;
 }
 #container .local_count .center .count_wrap .count_box .count_number {
   font-size: 20px;
@@ -507,6 +535,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   padding: 87px 0 0 20px;
+  border-radius: 10px;
 }
 #container .package .center .package_wrap .left .big_text {
   font-size: 30px;
@@ -517,7 +546,7 @@ body {
   width: 53%;
   background-color: palegreen;
   border-radius: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 18px;
   line-height: 45px;
   padding-left: 12px;
 }
@@ -534,7 +563,12 @@ body {
   top: 25%;
 }
 #container .package .center .package_wrap .right .local {
+  position: absolute;
+  left: 0;
+  top: 0;
   display: flex;
+  opacity: 0;
+  transition: all 0.5s;
 }
 #container .package .center .package_wrap .right .local .box {
   margin-right: 20px;
@@ -567,6 +601,9 @@ body {
 #container .package .center .package_wrap .right .local .box .package_info .price span {
   font-size: 22px;
   font-weight: 600;
+}
+#container .package .center .package_wrap .right .local.on {
+  opacity: 1;
 }
 #container .banner {
   background-color: orchid;
@@ -1015,6 +1052,21 @@ body {
   display: flex;
   background-color: #27aa78;
 }
+
+#go_top {
+  width: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  background-color: blue;
+  color: #fff;
+  text-align: center;
+  font-size: 23px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  cursor: pointer;
+}
+
 #login {
   height: 100vh;
   display: flex;
