--- a/views/travel_list.ejs
+++ b/views/travel_list.ejs
@@ -46,6 +46,8 @@
             </div>
         </div>
     </div>
+    <!-- 맨 위로 가는 기능 -->
+    <%- include("common/go_top.ejs"); %>
     <%- include("common/footer.ejs"); %>
 </body>
 </html>
