--- a/html/css/style.css
+++ b/html/css/style.css
@@ -32,6 +32,16 @@ body {
   font-family: "Noto Sans", sans-serif;
   font-family: "Noto Sans KR", sans-serif;
 }
+body::-webkit-scrollbar {
+  width: 8px;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #217af4;
+  border-radius: 10px;
+}
+body::-webkit-scrollbar-track {
+  background-color: rgba(33, 122, 244, 0.1);
+}
 
 #header {
   margin: 0 auto;
@@ -1065,6 +1075,45 @@ body {
   right: 20px;
   bottom: 20px;
   cursor: pointer;
+}
+
+#nothing {
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 100px 0 150px;
+}
+#nothing .wrap .icon {
+  margin: 0 auto 45px;
+  width: 180px;
+  line-height: 180px;
+  border-radius: 50%;
+  border: 15px solid #00d3ff;
+  font-size: 100px;
+  color: #00d3ff;
+}
+#nothing .wrap .text1 {
+  font-size: 30px;
+  margin-bottom: 17px;
+}
+#nothing .wrap .text2 {
+  font-size: 15px;
+  line-height: 20px;
+  margin-bottom: 20px;
+  color: #757575;
+}
+#nothing .wrap .text3 {
+  margin-bottom: 20px;
+  color: #757575;
+}
+#nothing .wrap .text3 span {
+  font-size: 20px;
+  color: #00d3ff;
+}
+#nothing .wrap .thank {
+  font-size: 20px;
 }
 
 #login {
