--- a/html/scss/_reset.scss
+++ b/html/scss/_reset.scss
@@ -9,4 +9,17 @@ body {
     line-height: 1;
     font-family: 'Noto Sans', sans-serif;
     font-family: 'Noto Sans KR', sans-serif;
+    // 스크롤바
+    // 스크롤바의 가로값
+    &::-webkit-scrollbar {width: 8px;}
+    // 스크롤바의 위치
+    &::-webkit-scrollbar-thumb {
+        // height: 5%;
+        background-color: #217af4;
+        border-radius: 10px;
+    }
+    // 스크롤바 뒷 배경
+    &::-webkit-scrollbar-track {
+        background-color: rgba(33,122,244,0.1);
+    }
 }
