--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -26,7 +26,7 @@
             <h1 class="logo"><a href="/"><img src="/img/logo.jpg" alt=""></a></h1>
             <ul class="gnb">
                 <li>
-                    <a href="#">해외패키지</a>
+                    <a href="/nothing">해외패키지</a>
                     <ul class="sub_menu">
                         <li><a href="#">아시아</a></li>
                         <li><a href="#">유럽</a></li>
@@ -34,7 +34,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">개별여행</a>
+                    <a href="/nothing">개별여행</a>
                     <ul class="sub_menu">
                         <li><a href="#">투어</a></li>
                         <li><a href="#">패스</a></li>
@@ -43,7 +43,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">테마여행</a>
+                    <a href="/nothing">테마여행</a>
                     <ul class="sub_menu">
                         <li><a href="#">허니문</a></li>
                         <li><a href="#">우정</a></li>
@@ -58,14 +58,14 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">항공</a>
+                    <a href="/nothing">항공</a>
                     <ul class="sub_menu">
                         <li><a href="#">해외항공</a></li>
                         <li><a href="#">국내항공</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">여행자보험</a>
+                    <a href="/nothing">여행자보험</a>
                     <ul class="sub_menu">
                         <li><a href="#">가입하기</a></li>
                         <li><a href="#">조회하기</a></li>
