22-11-02 / 메인페이지 접근성 작업중

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -230,7 +230,6 @@
             </div>
         </div>
         <!-- local_count 영역 -->
-        <!-- 53참조 -->
         <div class="local_count section">
             <div class="center">
                 <div class="count_wrap">
@@ -400,7 +399,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="airplan section">
+        <div class="airplan section">
             <div class="center">
                 <div class="air">
                     <div class="img"></div>
@@ -420,17 +419,17 @@
                 </div>
                 <div class="air">
                     <div class="img"></div>
-                    <p class="air_name">제주항공</p>
+                    <p class="air_name">이스타항공</p>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <!-- 맨 위로 가는 기능 -->
     <%- include("common/go_top.ejs"); %>
     <!-- 하단영역 -->
     <%- include("common/footer.ejs"); %>
     <!-- js -->
-    <!-- <script src="/js/slide.js"></script> -->
+    <script src="/js/slide.js"></script>
     <script src="/js/count.js"></script>
     <script src="/js/package_tab.js"></script>
     <!-- 패키지여행 / 인기있는지역 등 a태그 추가하기 -->
